# mnist-project

./: .gitignore  app.py  pyproject.toml
frontend/: index.html
frontend/css/: style.css
notebook/: MNIST.ipynb  euler_mnist.model
router/: mnist.py  predict.py
templates/: index.html
utils/: model.py  preproccess.py  query.py
xhr/: exceptions.py  response.py
