[tool.poetry]
name = "minst project"
version = "0.1.0"
description = ""
authors = ["dakohhh <wiizzydreadmill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
notebook = "^7.1.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
pillow = "^10.2.0"
opencv-python = "4.7.0.72"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
